# tini

./: .travis.yml  Cargo.toml  README.md
examples/: define.tini  factorial.n  if.tini
src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  prelude.rs  token.rs
src/interpreter/: builtins.rs  environment.rs  error.rs  value.rs
src/lexer/: error.rs
src/parser/: error.rs
tests/: lexer.rs  parser.rs
