[package]
name = "tini"
version = "0.1.0"
authors = ["Splinter Suidman (splintah)"]
license = "MIT"
edition = "2018"
repository = "https://gitlab.com/splintah/tini"
readme = "README.md"

[badges]
travis-ci = { repository = "splintah/tini", branch = "master" }

[[bin]]
name = "tinii"
path = "./src/bin/tinii.rs"

[[bin]]
name = "tini-repl"
path = "./src/bin/repl.rs"

[dependencies]
